alignment fixes

--- a/resources/components/common.less
+++ b/resources/components/common.less
@@ -577,7 +577,7 @@ a {
     div.tleft,
     div.floatleft,
     table.floatleft {
-        margin-left: @negative-margin;
+        margin-left: @negative-margin / 2;
     }
 
     div.tnone,
@@ -586,7 +586,7 @@ a {
     div.tright,
     div.floatright,
     table.floatright {
-        margin-right: @negative-margin;
+        margin-right: @negative-margin / 2;
     }
 
     figcaption,
